--- a/Projects/project/Portfolio_Website/index.html
+++ b/Projects/project/Portfolio_Website/index.html
@@ -32,7 +32,7 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Emanuel Tameklo</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Software Engineer</p>
+            <p class="section__subtitle section__subtitle--intro">Web Developer</p>
             <img src="img/path.jpg" alt="" class="intro__img">
         </section>
 
@@ -47,7 +47,7 @@
 
                 <div class="service">
                     <h3>Tech Support Engineer</h3>
-                    <p>This is my 9-5 job where day to day routine consist of troubleshooting customer cases within 4 different product pillars. 
+                    <p>This is my 9-5 job where my day to day routine consist of troubleshooting customer cases within 4 different product pillars. 
                     </p>
                 </div> <!--services-->
 
@@ -65,15 +65,14 @@
         <!--About me-->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">Software Engineer out of Utah</p>
+            <p class="section__subtitle section__subtitle--about">Programmer out of Utah</p>
 
             <div class="about-me__body">
                 <p> My name is Emanuel Tameklo and I am 21 years old. I am a father, Tech Support Engineer 
-                    and an Army reservist. I have been programming on and off for a while now but I have 
-                    recently starting taken it seriously about a year ago where I then completed a 
-                    python devoloper coding bootcamp. My goal is to become a software engineer that adds 
-                    value to what ever company I work at and to continue learning and building my skillset.
-                    I am always willing to learn and absorb information thrown my way.
+                    and an Army reservist. I have been programming on and off for a while now. Over the last 
+                    year, I have realized that coding is my passion so I have been working on my skills consistently. 
+                    My goal is to become a web developer that adds value to what ever task that is given. I am always 
+                    willing to learn and assimilate information thrown my way.
                 </p>
             </div>
 
@@ -83,32 +82,32 @@
         <!--My Work-->
         <section class="my-work" id="work">
             <h2 class="section__title section__title">My Work</h2>
-            <p class="section__subtitle section__subtitle--work"> A selection of my range of work</p>
+            <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
             <div class="portfolio">
                 <!--Portfolio Item 01-->
                 <a href="portfolio-index-1.html" class="portfolio__item">
-                    <img src="img/qr_generator.png" alt="" class="portfolio__img">
+                    <img src="img/qr_generator.png" alt="QR Generator" class="portfolio__img">
                 </a>
 
                 <!--Portfolio Item 02-->
                 <a href="portfolio-index-2.html" class="portfolio__item">
-                    <img src="img/gmail.png" alt="" class="portfolio__img">
+                    <img src="img/gmail.png" alt="Email Sender" class="portfolio__img">
                 </a>
 
                 <!--Portfolio Item 03-->
-                <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
+                <a href="portfolio-index-3.html" class="portfolio__item">
+                    <img src="img/bug.png" width="600" height="600" alt="Bug Tracker" class="portfolio__img">
                 </a>
 
                 <!--Portfolio Item 04-->
-                <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
+                <a href="portfolio-index-4.html" class="portfolio__item">
+                    <img src="img/Tic.png" width="600" height="590" alt="" class="portfolio__img">
                 </a>
 
                 <!--Portfolio Item 05-->
-                <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
+                <a href="portfolio-index-5.html" class="portfolio__item">
+                    <img src="img/Piano.jpg" width="600" height="600" alt="" class="portfolio__img">
                 </a>
 
                 <!--Portfolio Item 06-->
