--- a/Projects/project/Portfolio_Website/portfolio-index-3.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-3.html
@@ -29,21 +29,20 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                The <strong>QR Generator</strong>
+                <strong>Bug Tracker</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">---------------------- Generate a QR code for any website you type into the text field.</p>
-            <img src="img/qr_generator.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> Document any bug.</p>
+            <img src="img/bug.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>I found this project idea on Youtube and so I began researching what code would make this QR generator a possibility. 
-                With enough research this what I came up with this.
+            <p>dsbdbfaabfjbakgjblgfjglkjalgkjgfjgkjlgkjrgkjrblkjgrnljrwngjgrbgwljgrljwgjg
+                jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/qr_code_generator.py">
-                Click here to download to see the code to QR Code Generator
+            <a href="bug_tracker.py">
+                <img src="img/portfolio-03.jpg" width="1000">
             </a>
-            <img src="img/portfolio-01.jpg">
         </div>
             
         <!--Footer-->
