--- a/Projects/project/Portfolio_Website/portfolio-index-1.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-1.html
@@ -41,7 +41,7 @@
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/qr_code_generator.py">
-                Click here to download to see the code to QR Code Generator
+                Click here to see the code to the project
             </a>
             <img src="img/portfolio-01.jpg">
         </div>
