--- a/Projects/project/Portfolio_Website/portfolio-index-2.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-2.html
@@ -40,9 +40,10 @@
                 jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="email_sender.py">
-                <img src="img/portfolio-02.jpg" width="1000">
+            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/email_sender.py">
+                Click here to see the code to the project
             </a>
+            <img src="img/portfolio-02.jpg" width="1000">
         </div>
             
         <!--Footer-->
