--- a/Projects/project/Portfolio_Website/portfolio-index-3.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-3.html
@@ -41,7 +41,7 @@
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/bug_tracker.py">
-                Click here to see the code for the project
+                Click here to see the code the to project
             </a>
             <img src="img/portfolio-03.jpg" width="1000">
         </div>
