--- a/Projects/project/Portfolio_Website/portfolio-index-6.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-6.html
@@ -29,10 +29,10 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                <strong>Email Sender</strong>
+                <strong>Password Generator</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro"> Send any email you need.</p>
-            <img src="img/gmail.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> Security is key.</p>
+            <img src="img/lock.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
@@ -40,9 +40,10 @@
                 jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="email_sender.py">
-                <img src="img/portfolio-02.jpg" width="1000">
+            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/random_password_generator.py">
+                Click here to see the code to the project
             </a>
+            <img src="img/portfolio-02.jpg" width="1000">
         </div>
             
         <!--Footer-->
