--- a/Projects/project/Portfolio_Website/index.html
+++ b/Projects/project/Portfolio_Website/index.html
@@ -41,8 +41,9 @@
             <h2 class="section-title section__title--services">What I do</h2>
             <div class="services">
                 <div class="service">
-                    <h3>Fiverr</h3>
-                    <p>I started my Fiverr gig as a way to continue working on my skills and building experience.</p>
+                    <h3>Freelancing</h3>
+                    <p>I started my Fiverr gig as a way to continue working on my skills and building experience.
+                    </p>
                 </div> <!--services-->
 
                 <div class="service">
@@ -111,8 +112,8 @@
                 </a>
 
                 <!--Portfolio Item 06-->
-                <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-06.jpg" alt="" class="portfolio__img">
+                <a href="portfolio-index-6.html" class="portfolio__item">
+                    <img src="img/lock.png" width='600' height='600' alt="" class="portfolio__img">
                 </a>
 
                 <!--Portfolio Item 07-->
