--- a/Projects/project/Portfolio_Website/portfolio-index-6.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-6.html
@@ -32,7 +32,7 @@
                 <strong>Password Generator</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro"> Security is key.</p>
-            <img src="img/lock.png" alt="" class="intro__img">
+            <img src="img/L.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
