--- a/Projects/project/Portfolio_Website/index.html
+++ b/Projects/project/Portfolio_Website/index.html
@@ -117,8 +117,8 @@
                 </a>
 
                 <!--Portfolio Item 07-->
-                <a href="#" class="portfolio__item">
-                    <img src="img/portfolio-07.jpg" alt="" class="portfolio__img">
+                <a href="portfolio-index-7.html" class="portfolio__item">
+                    <img src="img/Pong.jpg" alt="" class="portfolio__img">
                 </a>
                 
                 <!--Portfolio Item 08-->
