--- a/Projects/project/Portfolio_Website/portfolio-index-1.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-1.html
@@ -36,8 +36,8 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>I found this project idea on Youtube and so I began researching what code would make this QR generator a possibility. 
-                With enough research this what I came up with this.
+            <p>I found this project idea online and was fascinated by the idea, so I began researching how to make this QR generator a possibility. 
+                With enough research this what I came up with.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/qr_code_generator.py">
