--- a/Projects/project/Portfolio_Website/portfolio-index-2.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-2.html
@@ -36,8 +36,9 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>dsbdbfaabfjbakgjblgfjglkjalgkjgfjgkjlgkjrgkjrblkjgrnljrwngjgrbgwljgrljwgjg
-                jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
+            <p>I have always thought how I could send an email with code and automate it, since in the workforce that is the main form 
+                of communication. A tool lik this can easily make your workday more efficient. Now all I have as of right now is the email sender part created 
+                but the complete version will have to ability to automate as well.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/email_sender.py">
