--- a/Projects/project/Portfolio_Website/portfolio-index-3.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-3.html
@@ -36,8 +36,9 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>dsbdbfaabfjbakgjblgfjglkjalgkjgfjgkjlgkjrgkjrblkjgrnljrwngjgrbgwljgrljwgjg
-                jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
+            <p>As a programmer you are always encountering bugs and so what I thought what is if there was a way to track your bugs and document them.
+                Now this project is incomplete because I would have to add some database of course to store each bug documented but in this version,
+                you only have the ability to document the issue and not store it.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/bug_tracker.py">
