--- a/Projects/project/Portfolio_Website/portfolio-index-4.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-4.html
@@ -36,8 +36,8 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>dsbdbfaabfjbakgjblgfjglkjalgkjgfjgkjlgkjrgkjrblkjgrnljrwngjgrbgwljgrljwgjg
-                jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
+            <p>The generic Tic Tac Toe program. Every programmer starts of with a project like this to learn programming concepts.
+                So I thought why not try it out.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/Projects/project/Portfolio_Website/TicTacToe/TicTacToe.html">
