--- a/Projects/project/Portfolio_Website/portfolio-index-6.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-6.html
@@ -36,8 +36,9 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>dsbdbfaabfjbakgjblgfjglkjalgkjgfjgkjlgkjrgkjrblkjgrnljrwngjgrbgwljgrljwgjg
-                jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
+            <p>In our day and age having the proper security precautions over our devices is a must. A password generator can help stop
+                uncalled malicious users from accessing accounts that are not theres to use. Now I know there are many different security tools out there 
+                but I decided to try to take a crack at it and this was what I created.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/random_password_generator.py">
