--- a/Projects/project/Portfolio_Website/portfolio-index-7.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-7.html
@@ -36,8 +36,8 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>dsbdbfaabfjbakgjblgfjglkjalgkjgfjgkjlgkjrgkjrblkjgrnljrwngjgrbgwljgrljwgjg
-                jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
+            <p>This game is classic and was fun to create. Although I will say I did have some help with since it was pretty complicated, 
+                due to understanding how physics work in pygames and other topics I am not well versed in. All in all this project taught me alot.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/pong.py">
