--- a/Projects/project/Portfolio_Website/portfolio-index-5.html
+++ b/Projects/project/Portfolio_Website/portfolio-index-5.html
@@ -36,9 +36,8 @@
         </section>
 
         <div class="portfolio-item-individual">
-            <p>dsbdbfaabfjbakgjblgfjglkjalgkjgfjgkjlgkjrgkjrblkjgrnljrwngjgrbgwljgrljwgjg
-                jhgqrgghlwkjgrjgq5uyghwsuhglqaiughqluinltrngkng.
-            </p>
+            <p>I am not a musician but it has always been a passion of mine to start learning how to play the piano. Hence, why I
+                created the program. It isn't anything crazy by far but I thought it would be fun to try. Disclaimer the is not tuned.
                 <!--Talk about the insight of the project and what you learned-->
             <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/Projects/project/Portfolio_Website/piano/index.html">
                 <img src="img/portfolio-05.jpg" width="1000">
