--- a/Projects/Portfolio_Website/portfolio-index-3.html
+++ b/Projects/Portfolio_Website/portfolio-index-3.html
@@ -29,20 +29,22 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                <strong>Tic Tac Toe</strong>
+                <strong>Bug Tracker</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro"> Fun Brain Teaser.</p>
-            <img src="img/Tac.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> Document any bug.</p>
+            <img src="img/bug.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>The generic Tic Tac Toe program. Every programmer starts of with a project like this to learn programming concepts.
-                So I thought why not try it out.
+            <p>As a programmer you are always encountering bugs and so what I thought what is if there was a way to track your bugs and document them.
+                Now this project is incomplete because I would have to add some database of course to store each bug documented but in this version,
+                you only have the ability to document the issue and not store it.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/Projects/project/Portfolio_Website/pro/TicTacToe/TicTacToe.html">
-                <img src="img/portfolio-04.jpg" width="1000">
+            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/Portfolio_Website/bug_tracker.py">
+                Click here to see the code the to project
             </a>
+            <img src="img/portfolio-03.jpg" width="1000">
         </div>
             
         <!--Footer-->
