--- a/Projects/Portfolio_Website/portfolio-index-5.html
+++ b/Projects/Portfolio_Website/portfolio-index-5.html
@@ -29,21 +29,19 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                <strong>Pong Arcade Game</strong>
+                <strong>Piano</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro"> Nostalgia in modern times.</p>
-            <img src="img/Pong.jpg" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> JS Piano.</p>
+            <img src="img/P.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>This game is classic and was fun to create. Although I will say I did have some help with since it was pretty complicated, 
-                due to understanding how physics work in pygames and other topics I am not well versed in. All in all this project taught me alot.
-            </p>
+            <p>I am not a musician but it has always been a passion of mine to start learning how to play the piano. Hence, why I
+                created the program. It isn't anything crazy by far but I thought it would be fun to try. Disclaimer the is not tuned.
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/pong.py">
-                Click here to see the code to the project
+            <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/project/Portfolio_Website/pro/piano/index.html">
+                <img src="img/portfolio-05.jpg" width="1000">
             </a>
-            <img src="img/portfolio-07.jpg" width="1000">
         </div>
             
         <!--Footer-->
