--- a/Projects/Portfolio_Website/portfolio-index-6.html
+++ b/Projects/Portfolio_Website/portfolio-index-6.html
@@ -29,22 +29,22 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                <strong>Bug Tracker</strong>
+                <strong>Password Generator</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro"> Document any bug.</p>
-            <img src="img/bug.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> Security is key.</p>
+            <img src="img/L.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>As a programmer you are always encountering bugs and so what I thought what is if there was a way to track your bugs and document them.
-                Now this project is incomplete because I would have to add some database of course to store each bug documented but in this version,
-                you only have the ability to document the issue and not store it.
+            <p>In our day and age having the proper security precautions over our devices is a must. A password generator can help stop
+                uncalled malicious users from accessing accounts that are not theres to use. Now I know there are many different security tools out there 
+                but I decided to try to take a crack at it and this was what I created.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/bug_tracker.py">
-                Click here to see the code the to project
+            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/Portfolio_Website/random_password_generator.py">
+                Click here to see the code to the project
             </a>
-            <img src="img/portfolio-03.jpg" width="1000">
+            <img src="img/portfolio-02.jpg" width="1000">
         </div>
             
         <!--Footer-->
