--- a/Projects/Portfolio_Website/portfolio-index-7.html
+++ b/Projects/Portfolio_Website/portfolio-index-7.html
@@ -29,22 +29,21 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                <strong>Email Sender</strong>
+                <strong>Pong Arcade Game</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro"> Send any email you need.</p>
-            <img src="img/gmail.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> Nostalgia in modern times.</p>
+            <img src="img/Pong.jpg" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>I have always thought how I could send an email with code and automate it, since in the workforce that is the main form 
-                of communication. A tool lik this can easily make your workday more efficient. Now all I have as of right now is the email sender part created 
-                but the complete version will have to ability to automate as well.
+            <p>This game is classic and was fun to create. Although I will say I did have some help with since it was pretty complicated, 
+                due to understanding how physics work in pygames and other topics I am not well versed in. All in all this project taught me alot.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/email_sender.py">
+            <a href="https://github.com/etameklo31/Projects/blob/main/project/Portfolio_Website/pong.py">
                 Click here to see the code to the project
             </a>
-            <img src="img/portfolio-02.jpg" width="1000">
+            <img src="img/portfolio-07.jpg" width="1000">
         </div>
             
         <!--Footer-->
