--- a/Projects/Portfolio_Website/portfolio-index-1.html
+++ b/Projects/Portfolio_Website/portfolio-index-1.html
@@ -29,22 +29,21 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                <strong>Password Generator</strong>
+                The <strong>QR Generator</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro"> Security is key.</p>
-            <img src="img/L.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro">---------------------- Generate a QR code for any website you type into the text field.</p>
+            <img src="img/qr_generator.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>In our day and age having the proper security precautions over our devices is a must. A password generator can help stop
-                uncalled malicious users from accessing accounts that are not theres to use. Now I know there are many different security tools out there 
-                but I decided to try to take a crack at it and this was what I created.
+            <p>I found this project idea online and was fascinated by the idea, so I began researching how to make this QR generator a possibility. 
+                With enough research this what I came up with.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/random_password_generator.py">
+            <a href="https://github.com/etameklo31/Portfolio/blob/main/project/Portfolio_Website/qr_code_generator.py">
                 Click here to see the code to the project
             </a>
-            <img src="img/portfolio-02.jpg" width="1000">
+            <img src="img/portfolio-01.jpg">
         </div>
             
         <!--Footer-->
@@ -57,10 +56,6 @@
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </li>
-                 <!--<li class="social-list__item">
-                    <a class="social-list__link" href="https://www.fiverr.com/emanueltameklo/program-any-python-scripting-that?context_referrer=search_gigs_with_recommendations_row_3&source=top-bar&ref_ctx_id=bd1a21c9286a65854f2d8331f1f4faf1&pckg_id=1&pos=1&context_type=auto&funnel=bd1a21c9286a65854f2d8331f1f4faf1&seller_online=true&imp_id=841740cd-4e13-40e9-96b0-ce62d89b854b"></a>
-                    <img src="img/fiverr.png" alt="" width="50" height="50">
-                </li>-->
                 <li class="social-list__item">
                     <a class="social-list__link" href="https://www.linkedin.com/in/emanuel-tameklo/">
                         <i class="fa-brands fa-linkedin-in"></i>
