--- a/Projects/Portfolio_Website/portfolio-index-2.html
+++ b/Projects/Portfolio_Website/portfolio-index-2.html
@@ -29,21 +29,22 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                The <strong>QR Generator</strong>
+                <strong>Email Sender</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">---------------------- Generate a QR code for any website you type into the text field.</p>
-            <img src="img/qr_generator.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> Send any email you need.</p>
+            <img src="img/gmail.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>I found this project idea online and was fascinated by the idea, so I began researching how to make this QR generator a possibility. 
-                With enough research this what I came up with.
+            <p>I have always thought how I could send an email with code and automate it, since in the workforce that is the main form 
+                of communication. A tool lik this can easily make your workday more efficient. Now all I have as of right now is the email sender part created 
+                but the complete version will have to ability to automate as well.
             </p>
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="https://github.com/etameklo31/Projects/blob/main/Projects/project/Portfolio_Website/qr_code_generator.py">
+            <a href="https://github.com/etameklo31/Portfolio/blob/main/project/Portfolio_Website/email_sender.py">
                 Click here to see the code to the project
             </a>
-            <img src="img/portfolio-01.jpg">
+            <img src="img/portfolio-02.jpg" width="1000">
         </div>
             
         <!--Footer-->
