--- a/Projects/Portfolio_Website/portfolio-index-4.html
+++ b/Projects/Portfolio_Website/portfolio-index-4.html
@@ -29,18 +29,18 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                <strong>Piano</strong>
+                <strong>Tic Tac Toe</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro"> JS Piano.</p>
-            <img src="img/P.png" alt="" class="intro__img">
+            <p class="section__subtitle section__subtitle--intro"> Fun Brain Teaser.</p>
+            <img src="img/Tac.png" alt="" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
-            <p>I am not a musician but it has always been a passion of mine to start learning how to play the piano. Hence, why I
-                created the program. It isn't anything crazy by far but I thought it would be fun to try. Disclaimer the is not tuned.
-                <!--Talk about the insight of the project and what you learned-->
-            <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/Projects/project/Portfolio_Website/pro/piano/index.html">
-                <img src="img/portfolio-05.jpg" width="1000">
+            <p>The generic Tic Tac Toe program. Every programmer starts of with a project like this to learn programming concepts.
+                So I thought why not try it out.
+            </p>
+            <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/Projects/Portfolio_Website/pro/TicTacToe/TicTacToe.html">
+                <img src="img/portfolio-04.jpg" width="1000">
             </a>
         </div>
             
