--- a/Projects/Portfolio_Website/portfolio-index-4.html
+++ b/Projects/Portfolio_Website/portfolio-index-4.html
@@ -39,7 +39,7 @@
             <p>The generic Tic Tac Toe program. Every programmer starts of with a project like this to learn programming concepts.
                 So I thought why not try it out.
             </p>
-            <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/Projects/Portfolio_Website/pro/TicTacToe/TicTacToe.html">
+            <a href="https://github.com/etameklo31/Portfolio/tree/main/pro/TicTacToe/TicTacToe.html">
                 <img src="img/portfolio-04.jpg" width="1000">
             </a>
         </div>
