--- a/Projects/Portfolio_Website/portfolio-index-5.html
+++ b/Projects/Portfolio_Website/portfolio-index-5.html
@@ -39,7 +39,7 @@
             <p>I am not a musician but it has always been a passion of mine to start learning how to play the piano. Hence, why I
                 created the program. It isn't anything crazy by far but I thought it would be fun to try. Disclaimer the is not tuned.
                 <!--Talk about the insight of the project and what you learned-->
-            <a href="C:/Users/emanu/Documents/GitHub/Python-Repo/project/Portfolio_Website/pro/piano/index.html">
+            <a href="https://github.com/etameklo31/Portfolio/tree/main/pro/piano/index.html">
                 <img src="img/portfolio-05.jpg" width="1000">
             </a>
         </div>
