--- a/Projects/Portfolio_Website/portfolio-index-4.html
+++ b/Projects/Portfolio_Website/portfolio-index-4.html
@@ -40,8 +40,9 @@
                 So I thought why not try it out.
             </p>
             <a href="https://github.com/etameklo31/Portfolio/tree/main/pro/TicTacToe/TicTacToe.html">
-                <img src="img/portfolio-04.jpg" width="1000">
+                Click here to see the code to the project
             </a>
+            <img src="img/portfolio-04.jpg" width="1000">
         </div>
             
         <!--Footer-->
