--- a/Projects/Portfolio_Website/portfolio-index-5.html
+++ b/Projects/Portfolio_Website/portfolio-index-5.html
@@ -40,8 +40,9 @@
                 created the program. It isn't anything crazy by far but I thought it would be fun to try. Disclaimer the is not tuned.
                 <!--Talk about the insight of the project and what you learned-->
             <a href="https://github.com/etameklo31/Portfolio/tree/main/pro/piano/index.html">
-                <img src="img/portfolio-05.jpg" width="1000">
+                Click here to see the code to the project
             </a>
+            <img src="img/portfolio-05.jpg" width="1000">
         </div>
             
         <!--Footer-->
